# BareDMG

./: .gitignore  CMakeLists.txt  README.md  compile_flags.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
include/: gbemu.h
include/core/: cartridge.h  utils.h
include/core/cpu/: cpu.h  cpu_exec.h
src/: main.c
src/core/: CMakeLists.txt  cartridge.c  gbemu.c  utils.c
src/core/cpu/: cpu.c  cpu_exec.c  cpu_tables.c
tests/: CMakeLists.txt  test_cartridge.c  test_utils.c
